# COSF

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  Makefile  README.md  assessment.yaml  assessment_advanced.yaml  cloud_recon.yaml  cosf.db  details.md  docker-compose.yaml  next.md  pyproject.toml  roadmap_v1_1.md  safety_config.yaml  test_advanced_mock.yaml  test_mock.py  test_parallel.yaml  test_workflow.yaml  verify_adapters.py
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md
conductor/archive/adapter_expansion/: spec.md
conductor/archive/ai_workflow_generation/: plan.md
conductor/archive/attack_path_modeling/: plan.md
conductor/archive/enterprise_control_plane/: spec.md
conductor/archive/normalization/: spec.md
conductor/archive/visual_workflow_builder/: spec.md
conductor/archive/web_dashboard/: plan.md
conductor/tracks/adapter_expansion/: plan.md
conductor/tracks/advanced_workflow/: plan.md  spec.md
conductor/tracks/ai_workflow_generation/: plan.md  spec.md
conductor/tracks/attack_path_modeling/: plan.md  spec.md
conductor/tracks/cloud_integration/: plan.md  spec.md
cosf/: cli.py
cosf/ai/: engine.py  prompts.py
cosf/api/: main.py
cosf/engine/: adapter.py  graph.py  intelligence.py  loader.py  normalization.py  policy.py  predictive.py  reporting.py  runtime.py  simulation.py  tasks.py
cosf/marketplace/: manager.py  schema.py
cosf/models/: database.py  db_session.py  evidence.py  som.py
cosf/parser/: workflow.py
cosf/utils/: crypto.py  hooks.py  secrets.py  storage.py  variables.py
docs/: ARCHITECTURE.md  SECURITY_MODEL.md  WORKFLOW_LANGUAGE.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  MarketplaceView.tsx  index.css
playbooks/: forensic_collection.yaml  ransomware_containment.yaml
reports/: report_04238bac-182c-4297-a42b-726e54ed4d42.md  report_ccf448dd-8c33-45f5-ade0-7b5ae3c10d68.md
reports/83dd3313-b40b-40ab-b153-cb0eedc5dec1/: dashboard.html
tests/: test_adapter_expansion.py  test_adapter_interface.py  test_ai_generation.py  test_aws_adapter.py  test_cli.py  test_cli_extended.py  test_cli_monitor.py  test_cloud_storage.py  test_conditional_logic.py  test_e2e.py  test_engine.py  test_evidence_management.py  test_graph_analysis.py  test_intelligence.py  test_loader.py  test_marketplace_api.py  test_nmap_adapter.py  test_normalization.py  test_nuclei_adapter.py  test_reporting.py  test_shell_adapter.py  test_shodan_adapter.py  test_simulation_mode.py  test_som.py  test_wdl_3_dsl.py  test_workflow_parser.py  verify_normalization.py  verify_policy.py
(+38 files in other folders)
