[project]
name = "cosf"
version = "0.1.0"
description = "Cyber Operations Standardization Framework (COSF)"
authors = [{ name = "GOKUL" }]
dependencies = [
    "pydantic[email]>=2.6.1",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "fastapi>=0.109.2",
    "asyncio>=3.4.3",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.4",
    "pytest-asyncio>=0.23.5",
]

[tool.setuptools.packages.find]
include = ["cosf*"]

[project.scripts]
cosf = "cosf.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']
