[project]
name = "cosf"
version = "0.1.0"
description = "Cyber Operations Standardization Framework (COSF)"
authors = [{ name = "GOKUL" }]
dependencies = [
    "pydantic[email]>=2.6.1",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "fastapi>=0.109.2",
    "asyncio>=3.4.3",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.3",
    "docker>=7.0.0",
    "networkx>=3.2.1",
    "httpx>=0.27.0",
    "pymetasploit3>=1.0.3",
    "boto3>=1.34.0",
    "redis>=5.0.1",
    "rq>=1.16.1",
    "hvac>=2.1.0",
    "reportlab>=4.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.98.4",
    "pytest-asyncio>=0.23.5",
    "moto[s3]>=5.0.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
include = ["cosf*"]

[project.scripts]
cosf = "cosf.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']
